syntax = "proto3";
package economy;

message GetCorporationRequest {
  bytes session_uuid = 1;
}

message GetCorporationResponse {
  CorporationInfo corporation = 1;
}

message CorporationInfo {
  bytes uuid = 1;
  bytes session_uuid = 2;
  bytes user_uuid = 3;
  string name = 4;
  int64 balance = 5;
}
